--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     mavenLocal()
-    maven {
-        url "https://dl.bintray.com/fungamesleaks/mavenRepo"
-    }
+    maven { url "https://dl.bintray.com/fungamesleaks/mavenRepo" }
     maven { url 'https://jitpack.io' }
 }
 
