--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'maven-publish'
+    id "com.jfrog.bintray" version "1.8.1"
     id 'org.jetbrains.dokka' version '0.10.0'
 }
 
@@ -26,6 +27,25 @@ task javadocJar(type: Jar) {
     classifier = 'javadoc'
 }
 
+bintray {
+    user = findProperty("bintray.user")
+    key = findProperty('bintray.key')
+    publications = ['maven']
+
+    pkg {
+        repo = 'mavenRepo'
+        name = 'FortniteDownloader'
+        userOrg = 'fungamesleaks'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/FabianFG/FortniteDownloader.git'
+        version {
+            name = version
+            desc = version
+            released  = new Date()
+        }
+    }
+
+}
 
 publishing {
     publications {
