updated for next jfortniteparse release
Took 1 hour 58 minutes

--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,15 @@ plugins {
 }
 
 group 'me.fabianfg'
-version '1.6.1'
+version '1.6.8'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
     mavenLocal()
+    google()
+    jcenter()
     maven { url "https://dl.bintray.com/fungamesleaks/mavenRepo" }
     maven { url 'https://jitpack.io' }
 }
@@ -62,7 +64,7 @@ publishing {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "me.fungames:JFortniteParse:3.2.6"
+    implementation "me.fungames:JFortniteParse:3.6"
     implementation "me.fungames:Fortnite-Api:1.7.1"
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.0'
